of course sites.

This version also adds versioning support for content blocks and programatic
sorting of content to enable blogging.

Upgrade Notes: The icons/ directory has been renamed to images/ to prevent
conflicts with the Apache system icons directory. Be sure to run the Segue Updaters
under Admin tools to update the table structure to support versioning.
		
		
	**** IMPORTANT *** Change: 
		Run the Updaters under Admin Tools --&gt; Segue Updates to update the table
		structure. 
		(2008-01-14 - Adam Franco)
		
	* Change: #1871485 
		Classic Mode UI: Now 'Add Image' and 'Add File' buttons are hidden when
		using the FCK editor.
		(2008-01-14 - Adam Franco)
		
	* New feature: #1798872 
		Site Display: Can now programatically order content blocks by title, create
		date, or modification date, all ascending or descending.
		(2008-01-11 - Adam Franco)
		
	* New feature: #1820927 
		New versioning system for plugin-content. Optionally supported by individual
		plugins. 
		(2008-01-08 - Adam Franco)
		
	* Change: 
		Slots: Added documentation to Admin UI.
		(2008-01-04 - Adam Franco)
		
	* Change: #1864130 
		Slots: Can now change the type of a slot when editing or adding.
		(2008-01-04 - Adam Franco)
		
	* Bug Fix: #1851038 
		Portal/Slots: Have cut the load time by ~2/3. From 30 seconds to 11 seconds.
		
		The big overhead that is now skipped was checking the ownership status of
		all members of a class rather than just the current user.
		(2008-01-04 - Adam Franco)
		
	* Bug Fix: 
		Slots: Now internally and externally defined slots are merged properly so
		that all intended owners are given authorizations.
		(2008-01-04 - Adam Franco)
		
	* Bug Fix: 
		Slots: Added a unique-key to the slot-owner table to prevent duplicate
		entries. 
		(2008-01-04 - Adam Franco)
		
	* Bug Fix: 
		Portal/Slots: Now edit and delete links are not shown for course sites if
		the user doesn't have authorization to take action on the site.
		(2008-01-14 - Adam Franco)
		
	* Change: 