@@ -25,9 +25,15 @@
 <h1>Segue Change Log</h1>
 <h2>Version 2.0-beta-8</h2>
 <h3>2008-01-14</h3>
-<p></p>
+<p>This release clarifies the role of slots/site-placehoders and brings some performance improvements to the portal page, especially for users with large numbers of course sites.
+<br>
+<br>This version also adds versioning support for content blocks and programatic sorting of content to enable blogging.
+<br>
+<br>Upgrade Notes: The icons/ directory has been renamed to images/ to prevent conflicts with the Apache system icons directory. Be sure to run the Segue Updaters under Admin tools to update the table structure to support versioning.</p>
 <ul>
 		
+		<li>
+<span style="color: red">*** IMPORTANT ***</span><b>Change:</b> Run the Updaters under Admin Tools --&gt; Segue Updates to update the table structure. (<em>2008-01-14 - Adam Franco</em>)</li>
 		<li>
 <b>Change:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1871485&amp;group_id=&amp;atid=">
         			#1871485</a> Classic Mode UI: Now 'Add Image' and 'Add File' buttons are hidden when using the FCK editor. (<em>2008-01-14 - Adam Franco</em>)</li>
