@@ -5,7 +5,7 @@
  @copyright Copyright &copy; 2005, Middlebury College
  @license http://www.gnu.org/copyleft/gpl.html GNU General Public License (GPL)
  
- @version $Id: changelog.xml,v 1.123 2008/01/14 21:44:05 adamfranco Exp $
+ @version $Id: changelog.xml,v 1.124 2008/01/14 21:45:28 adamfranco Exp $
  -->
 <!DOCTYPE changelog SYSTEM "../dtds/changelog.dtd">
 
@@ -22,6 +22,8 @@
 			Upgrade Notes: The icons/ directory has been renamed to images/ to prevent
 			conflicts with the Apache system icons directory. Be sure to run the Segue
 			Updaters under Admin tools to update the table structure to support versioning.
+			
+			Segue 2.0 beta 8 uses Polyphony 0.10.7 and Harmoni 0.13.7.
 		</releaseNotes>
 		<important author='adam' date='2008-01-14'>
 			Run the Updaters under Admin Tools --&gt; Segue Updates to update the table
