@@ -16,6 +16,8 @@ Upgrade Notes: The icons/ directory has been renamed to images/ to prevent
 conflicts with the Apache system icons directory. Be sure to run the Segue Updaters
 under Admin tools to update the table structure to support versioning.
 
+Segue 2.0 beta 8 uses Polyphony 0.10.7 and Harmoni 0.13.7.
+
 
 v. 2.0-beta-7 (2007-12-20)
 ----------------------------------------------------
